final commit, some cleans up n stuff

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,6 @@
 <body>
   <h class="intro">Tony's Contact Book</h>
   <br>
-  <a class="intro" href="/contactbook"><button>Click Me</button></a>
+  <a class="intro" href="/contacts"><button>Click Me</button></a>
 </body>
 </html>
